--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "@sendgrid/mail": "^7.6.2",
+    "@types/multer": "^1.4.7",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.29.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
